# uwv_control

./: CMakeLists.txt
launch/: auv_3_0_testing.launch  hardware_remote_control.launch
src/vec6/: CMakeLists.txt
src/vec6/common/: vec6_comms.cpp  vec6_comms.h  vec6_config.h  vec6_controller.cpp  vec6_controller.h  vec6_hardwarecontroller.cpp  vec6_hardwarecontroller.h  vec6_simcontroller.cpp
src/vec6/remote_control/: CMakeLists.txt  hardware_remote_control.cpp  hardware_remote_control.h  remote_control.cpp  sim_remote_control.cpp
src/vec6/sauvc_tasks/: CMakeLists.txt  auv_3_0_testing_task_list.cpp  auv_3_0_testing_task_list.h  auv_3_0_testing_tasks_exe.cpp  auv_3_0_testing_tasks_exe.h
